feat: added realtime websockets
