# http/docs/swagger.json
@@ -749,6 +749,13 @@
                     "type": "string",
                     "example": "ABC123"
                 },
+                "members": {
+                    "description": "List of members in the room",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/rooms.userResponse"
+                    }
+                },
                 "persistent": {
                     "description": "Whether the room is persistent",
                     "type": "boolean",
@@ -768,6 +775,10 @@
                     "description": "Message content",
                     "type": "string",
                     "example": "Hello, world!"
+                },
+                "createdAt": {
+                    "description": "Message timestamp",
+                    "type": "string"
                 },
                 "id": {
                     "description": "Unique message identifier",
@@ -801,6 +812,13 @@
                     "description": "Code required to join the room",
                     "type": "string",
                     "example": "ABC123"
+                },
+                "members": {
+                    "description": "List of members in the room",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/rooms.userResponse"
+                    }
                 },
                 "messages": {
                     "description": "List of messages in the room",
